# pypdd

./: .gitignore  .pylintrc  .zenodo.json  README.rst  names.ini  pdd.py  pypdd.py  pyproject.toml  r.pdd.py  setup.py
.github/workflows/: pypi.yaml  test.yaml
